2011-07-22  Alexey Proskuryakov  <ap@apple.com>

        Adding Tim Horton to contributor list for Bugzilla auto-completion. He is CC'ed quite frequently.

        Unreviewed.

        * Scripts/webkitpy/common/config/committers.py:

2011-07-22  Michal Pakula vel Rutka  <m.pakula@samsung.com>

        [EFL] ewk_frame_hit_test_new enchancement
        https://bugs.webkit.org/show_bug.cgi?id=64260

        Apply changes done in ewk_frame_hit_test_new in EWebLauncher:
        Replacing Ewk_Hit_Test_Result_Context structure 'flags'
        in hit test output to by enum 'context'.

        Reviewed by Antonio Gomes.

        * EWebLauncher/main.c:
        (on_key_down):

2011-07-21  Adam Roben  <aroben@apple.com>

        Fix typo in TestFailures

        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/ViewController.js:

2011-07-21  Ojan Vafai  <ojan@chromium.org>

        simplify gtest display now that we strip modifiers from the JSON
        https://bugs.webkit.org/show_bug.cgi?id=64990

        Reviewed by Adam Barth.

        Now that names are normalized, we can remove all the code that
        handles gtest name changes (e.g. for adding modifiers like DISABLED_).
        Instead, if you try to list a test with a modifier in it, we need
        to strip the modifier so we get the normalized value.

        We also get rid of the concept of extra/missing expectations for gtests.
        In a patch soon, we'll stop showing extra/missing expectations from the UI
        entirely and only leave it for the special updating test_expectations.txt
        view of the dashboard, which doesn't apply to gtests.

        * TestResultServer/static-dashboards/flakiness_dashboard.html:
        * TestResultServer/static-dashboards/flakiness_dashboard_tests.js:

2011-07-21  Adam Barth  <abarth@webkit.org>

        Refactor Trac.js for use in garden-o-matic
        https://bugs.webkit.org/show_bug.cgi?id=64998

        Reviewed by Adam Roben.
